tmg-documentation/1.4/index.md
# **Travel Modelling Group** - User Guides and Documentation v1.4.

Travel Modelling Group is a research group housed within the Department of Civil Engineering at the University of Toronto. In addition to acting as a nexus for collaboration between the Province of Ontario's various transportation agencies, TMG strives to maintain a public-oriented focus by developing open source tools that make a meaningful contribution to the domain of transportation planning and research. 

Part of the development of public-domain tools that are willingly adopted by new users is maintaing an up-to-date user guide and documentation. 

## **XTMF** - The eXtensible Travel Modelling Framework

The eXtensible Travel Modelling Framework (XTMF) is an open-source (GPLv3) software platform developed by the University of Toronto to build model systems through the composition and configuration of different modules. This means that all modules used to construct GTAModel V4.0 have their code available for inspection or recompilation

## **TMGToolBox** - The eXtensible Travel Modelling Framework

The TMG Toolbox is a suite of Python tools written for Emme transportation planning software. Emme itself is a product of INRO Consultants, Inc.; however the TMG Toolbox is open-source under GPL3.0 (see license file for full text)

The TMG Toolbox is developed by the Travel Modelling Group at the University of Toronto. The authors hope that this toolbox will improve the practise of operational transportation planning by facilitating advanced analyses of travel demand forecasting models implemented in Emme.

## **GTAModelV4.0**

Documentation for TMG's GTAModelV4.0 documentation.