tmg-documentation/1.6/index.md
# Travel Modelling Group - User Guides and Documentation

Travel Modelling Group is a research group housed within the Department of Civil Engineering at 
the University of Toronto. In addition to acting as a nexus for collaboration between the Province
of Ontario's various transportation agencies, TMG strives to maintain a public-oriented focus by
developing open source tools that make a meaningful contribution to the domain of transportation
planning and research. 

Part of the development of public-domain tools that are willingly adopted by new users is maintaining
an up-to-date user guide and documentation. 

## XTMF - The eXtensible Travel Modelling Framework

The [eXtensible Travel Modelling Framework (XTMF)](xtmf/index.md) is an open-source (GPLv3)
software platform developed by the University of Toronto to build model systems 
through the composition and configuration of different modules. This means that all
modules used to construct GTAModel V4.0+ have their code available for inspection or recompilation

## TMGToolBox for EMME

The [TMG Toolbox for EMME](tmgtoolbox/index.md) is a suite of Python tools written for Emme transportation planning 
software. Emme itself is a product of INRO Consultants, Inc.; however, the TMG Toolbox
is open source under GPL3.0 (see license file for full text)

## TMGToolbox for Aimsun

The [TMG Toolbox for Aimsun](tmgtoolbox_aimsun/index.md) is a set of scripts for [Aimsun Next](https://www.aimsun.com/) that allow XTMF
to automate the usage of it.

## TMG.Visum

[TMG.Visum](tmg.visum/index.md) is an optional set of modules for XTMF that can automate [PTV's VISUM](https://www.ptvgroup.com/en/products/ptv-visum) software.

## GTAModel V4

Documentation for TMG's [GTAModelV4](gtamodel/index.md).  This includes:

* [Calibration Guide](gtamodel/calibration/index.md) - Documentation for modifying a base-model from TMG to better fit for a particular agency.
* [Model Design](gtamodel/model_design/overview.md) - Documentation going into more depth about the different submodels that combine to form GTAModel V4.
* [User Guide](gtamodel/user_guide/overview.md) - Documentation going through setup, configuration, outputs, and interoperability with GTAModel V4.
